--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
  <a href="index.html">
                 <h1 class="header">kelsie <strong>dustin</strong></h1>
             </a>
-            <nav>
-                <ul id="mainmenu">
+            <nav class="mainmenu"><button onclick="myNav()"><hr><hr><hr></button>
+                <ul>
                     <a class="active" href="index.html">
                         <li>Home</li>
                     </a>
