--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <footer w3-include-html="footer.html">
            
         </footer>
+        <script src="scripts/hamburger.js"></script>
         <script src="scripts/include.js"></script>
         <script src="scripts/modularize.js"></script>
         <script src="scripts/sticky.js"></script>
