--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
          <footer w3-include-html="footer.html">
            
         </footer>
+        <script src="scripts/hamburger.js"></script>
         <script src="scripts/include.js"></script>
         <script src="scripts/modularize.js"></script>
         <script src="scripts/wayfinding.js"></script>
