--- a/footer.html
+++ b/footer.html
@@ -4,5 +4,5 @@
                 <a href="https://www.behance.net/kellodusta15d"> <img src="images/icons-04.jpg" alt="Behance Icon"> </a>
                 <a href="https://www.pinterest.com/kellodustdesign/"> <img src="images/icons_Prancheta%201.jpg" alt="Pinterest Icon"></a>
             </div>
-            <span>Designed by Kelsie Dustin &copy; 2018 | All Rights Reserved | Kellodust Design</span>
+            <span>Designed by Kelsie Dustin &copy; 2019 | All Rights Reserved</span>
 
