--- a/header.html
+++ b/header.html
@@ -6,13 +6,13 @@
                     <a class="active" href="index.html">
                         <li>Home</li>
                     </a>
-                    <a href="contact.html">
+                    <a href="portfolio.html">
                         <li>Projects</li>
                     </a>
-                    <a href="freestuff.html">
+                    <a href="bio.html">
                         <li>About</li>
                     </a>
-                    <a href="freestuff.html">
+                    <a href="contact.html">
                         <li>Contact</li>
                     </a>
                 </ul>
