--- a/portfolio.html
+++ b/portfolio.html
@@ -31,11 +31,26 @@
         <img id="portfolioicon" src="images/cactusFinal-13.png" alt="Cactus Icon">
         
         <h2>Posters and Advertisements</h2>
+
+        <h3>Leave the Door Open—An Anti-Pornography Campaign</h3>
+        <div class="portfoliogrid">
+        <img src="images/saamExhibition.jpg" alt="Anti-Pornography ">
+        <img src="images/saam2.jpg" alt="Anti-Pornography Poster">
+        <img src="images/saam3.jpg" alt="Anti-Pornography Poster 2">
+        </div>
+        <p>These three posters are a part of an anti-pornography 
+            public service announcement campaign called "Leave the Door Open". 
+            For each poster I took photos of real people as my template for my designs. E
+            ach person really was holding a device in front of them or in their hands. I 
+            wanted each setting to feel genuine. The people in the background represent those 
+            we love and may be hurting while viewing pornography.
+        </p>
+
          <h3>Leave the Door Open—An Anti-Pornography Campaign</h3>
         <div class="portfoliogrid">
-        <img src="images/finalposter_Prancheta%201.png" alt="Anti-Pornography ">
-        <img src="images/finalposter_Prancheta%201%20c%C3%B3pia%202.png" alt="Anti-Pornography Poster">
-        <img src="images/finalposter_Prancheta%201%20c%C3%B3pia.png" alt="Anti-Pornography Poster 2">
+        <img src="images/finalposter_Prancheta 1 cópia 2.jpg" alt="Anti-Pornography ">
+        <img src="images/finalposter_Prancheta 1 cópia.jpg" alt="Anti-Pornography Poster">
+        <img src="images/finalposter_Prancheta 1.jpg" alt="Anti-Pornography Poster 2">
         </div>
         <p>These three posters are a part of an anti-pornography public service announcement campaign called "Leave the Door Open". For each poster I took photos of real people as my template for my designs. Each person really was holding a device in front of them or in their hands. I wanted each setting to feel genuine. The people in the background represent those we love and may be hurting while viewing pornography.
  </p>
