--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,23 @@
             we love and may be hurting while viewing pornography.
         </p>
 
+        <h3>Leave the Door Open—An Anti-Pornography Campaign</h3>
+        <div class="portfoliogrid">
+        <img src="images/derekBrown-01.jpg" alt="Anti-Pornography ">
+        <img src="images/jazzposter.png" alt="Anti-Pornography Poster">
+        <img src="images/pianomajors.png" alt="Anti-Pornography Poster 2">
+        <img src="images/universityOrchestra.png" alt="Anti-Pornography ">
+        <img src="images/jointheBandPoster.jpg" alt="Anti-Pornography Poster">
+        <img src="images/VocalChamberNight-01.jpg" alt="Anti-Pornography Poster 2">
+        </div>
+        <p>These three posters are a part of an anti-pornography 
+            public service announcement campaign called "Leave the Door Open". 
+            For each poster I took photos of real people as my template for my designs. E
+            ach person really was holding a device in front of them or in their hands. I 
+            wanted each setting to feel genuine. The people in the background represent those 
+            we love and may be hurting while viewing pornography.
+        </p>
+
          <h3>Leave the Door Open—An Anti-Pornography Campaign</h3>
         <div class="portfoliogrid">
         <img src="images/finalposter_Prancheta 1.jpg" alt="Anti-Pornography ">
