--- a/portfolio.html
+++ b/portfolio.html
@@ -55,13 +55,15 @@
         
         <h2>Posters and Advertisements</h2>
 
-        <h3>Leave the Door Open—An Anti-Pornography Campaign</h3>
+        <h3>Recovery & Change Poster Servies</h3>
         <div class="portfoliogrid">
         <img src="images/saamExhibition.jpg" alt="Anti-Pornography ">
         <img src="images/saam2.jpg" alt="Anti-Pornography Poster">
         <img src="images/saam3.jpg" alt="Anti-Pornography Poster 2">
         </div>
-        <p>This project was for sexual assault awareness month.
+        <p>This project was for sexual assault awareness month. It was featured in an Exhibit put on 
+            by the Family Crisis Center. The caption read: "There is no destination. But moving forward 
+            day by day is the ultimate goal. As long as there is movement, there is progress."
         </p>
 
         <h3>Leave the Door Open—An Anti-Pornography Campaign</h3>
