poster fix maybe

--- a/portfolio.html
+++ b/portfolio.html
@@ -87,8 +87,8 @@
          <h3>Leave the Door Open—An Anti-Pornography Campaign</h3>
         <div class="portfoliogrid">
         <img src="images/finalposter_Prancheta 1.jpg" alt="Anti-Pornography ">
-        <img src="images/finalposter_Prancheta 1 cópia 2.jpg" alt="Anti-Pornography Poster">
-        <img src="images/finalposter_Prancheta 1 cópia.jpg" alt="Anti-Pornography Poster 2">
+        <img src="images/finalposter_Prancheta 1 cópia 2.png" alt="Anti-Pornography Poster">
+        <img src="images/finalposter_Prancheta 1 cópia.png" alt="Anti-Pornography Poster 2">
         </div>
         <p>These three posters are a part of an anti-pornography public service announcement 
             campaign called "Leave the Door Open". For each poster I took photos of real 
