--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,10 @@
                 I designed and developed this site from scratch, however, this site is not actually 
                 intended for your daily weather report. The information is accurate but this site 
                 was designed strictly for design and developmental purposes. The actual site can be 
-                found from my GitHub account at this link: 
-                https://kellodust.github.io/cit_230/assignments/weather-site/index.html. </p>
+                found from my GitHub account at this 
+                <a href="https://kellodust.github.io/cit_230/assignments/weather-site/index.html"><strong>
+                    link.</strong>
+                </a> </p>
 
             <h3>Binge: The Real Enemy of Productivity Prototype</h3>
             
