--- a/header.html
+++ b/header.html
@@ -9,6 +9,9 @@
                     <a href="portfolio.html">
                         <li>Projects</li>
                     </a>
+                    <a href="resume.html">
+                            <li>Resume</li>
+                        </a>
                     <a href="bio.html">
                         <li>About</li>
                     </a>
