--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
             <header w3-include-html="header.html">
            
         </header>
-        <main>
+        <main class="resume">
 
 <h2>EXPERIENCE</h2>
 <h3>BYU-Idaho Music Department</h3>
