--- a/portfolio.html
+++ b/portfolio.html
@@ -92,9 +92,9 @@
 
         <h3>Recovery & Change Poster Servies</h3>
         <div class="portfoliogrid">
-        <img src="images/saamExhibition.jpg" alt="Anti-Pornography ">
-        <img src="images/saam2.jpg" alt="Anti-Pornography Poster">
-        <img src="images/saam3.jpg" alt="Anti-Pornography Poster 2">
+        <img src="images/saamExhibition.png" alt="Anti-Pornography ">
+        <img src="images/saam2.png" alt="Anti-Pornography Poster">
+        <img src="images/saam3.png" alt="Anti-Pornography Poster 2">
         </div>
         <p>This project was for sexual assault awareness month. It was featured in an Exhibit put on 
             by the Family Crisis Center. The caption read: "There is no destination. But moving forward 
