--- a/resume.html
+++ b/resume.html
@@ -35,8 +35,8 @@ and Pinnacle Pest Elimination.</p>
 <h2>EDUCATION</h2>
 <h3>Brigham Young University-Idaho</h3>
 <h4>Fall 2014 - Present, Rexburg, ID</h4>
-BA in Graphic Design. Minor in Computer Information Technology.
-Current GPA-3.98. Graduation anticipated Spring 2020.
+<p>BA in Graphic Design. Minor in Computer Information Technology.
+Current GPA-3.98. Graduation anticipated Spring 2020.</p>
 <h2>SKILLS</h2>
 <p>Software: Adobe Illustrator, Photoshop and InDesign.<br>
 Languages: HTML5, CSS3, SCSS, JavaScript, PHP, SQL<br>
