--- a/portfolio.html
+++ b/portfolio.html
@@ -22,14 +22,15 @@
             
         <img src="images/themountainspokemockup.png" alt="Webpage Mockup">
         <!--<img src="images/mountainspokeshop.png" alt="Mountain Spoke Screenshot">-->
-            <p>The Mountain Spoke Website was created for a fictional company in Bozeman, Montana. This project consisted of first creating the company identity and target audience. After, the overall design concept and plan was created. A brief version of this design plan can be seen at this <a href="https://kellodust.github.io/cit_230/assignments/lesson-12/websiteplan.pdf"><strong>link</strong></a>. I then marked up the website and created a responsive design. The design consists of several pages including a shop page, a contact page and an event registration form. The finished website can be found at this <a href="https://kellodust.github.io/cit_230/assignments/lesson-12/index.html"><strong>link.</strong></a></p>
-            <img src="images/mountaindesk1.png" alt="Webpage Mockup">
-            <img src="images/mountaindesk2.png" alt="Webpage Mockup">
-            <img src="images/mountaindesk3.png" alt="Webpage Mockup">
-            <div class="portfoliogrid"><img src="images/moutaintablet1.png" alt="Webpage Mockup">
-            <img src="images/mountaintablet2.png" alt="Webpage Mockup">
-            <img src="images/mountaintablet3.png" alt="Webpage Mockup">
-            </div>
+            <p>The Mountain Spoke Website was created for a fictional company in Bozeman, Montana. 
+                This project consisted of first creating the company identity and target audience. 
+                After, the overall design concept and plan was created. A brief version of this 
+                design plan can be seen at this 
+                <a href="https://kellodust.github.io/cit_230/assignments/lesson-12/websiteplan.pdf"><strong>link</strong></a>. 
+                I then marked up the website and created a responsive design. 
+                The design consists of several pages including a shop page, 
+                a contact page and an event registration form. The finished 
+                website can be found at this <a href="https://kellodust.github.io/cit_230/assignments/lesson-12/index.html"><strong>link.</strong></a></p>
             <div class="portfoliogrid"><img src="images/moutain1.png" alt="Webpage Mockup">
                 <img src="images/moutain2.png" alt="Webpage Mockup">
                 <img src="images/mountain3.png" alt="Webpage Mockup">
