--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
                 two fonts and only two fonts, at least three colors, and a header and footer 
                 to the website. The full project and more details can be found
                 <a href="https://www.behance.net/gallery/58845243/Web-Style-Guide"><strong>here</strong></a>
-        <h3>Insight Web Style Guide</h3>
+        <h3>Acaí: An Infographic</h3>
             
             <img src="images/acaitop.png" alt="Webpage Mockup">
                 <!--<img src="images/mountainspokeshop.png" alt="Mountain Spoke Screenshot">-->
@@ -101,7 +101,7 @@
             day by day is the ultimate goal. As long as there is movement, there is progress."
         </p>
 
-        <h3>Leave the Door Open—An Anti-Pornography Campaign</h3>
+        <h3>Music Poster Series</h3>
         <div class="portfoliogrid">
         <img src="images/derekBrown-01.jpg" alt="Anti-Pornography ">
         <img src="images/pianomajors.png" alt="Anti-Pornography Poster 2">
