--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <!-- <div class="container"> -->
         <header class="header" id="myHeader" w3-include-html="header.html">
             
         </header>
@@ -57,7 +57,7 @@
 
 
 
-        </div>
+        <!-- </div> -->
         </main>
         <footer w3-include-html="footer.html">
            
