--- a/index.html
+++ b/index.html
@@ -17,35 +17,7 @@
 
             <h1>well hello there.</h1></div>
             <div class="home-grid">
-           <div>
-               1
-           </div>
-           <div>
-                2
-            </div>
-            <div>
-            3
-            </div>
-            <div>
-            4
-            </div>
-            <div>
-            5
-            </div><div>
-               6
-          </div><div>
-                7
-            </div><div>
-                      8
-            </div><div>
-                        9
-            </div><div>
-                10
-            </div><div>
-                11
-        </div><div>
-        12
-            </div>
+           <img src="images/binge.png" alt="Binge Website">
 
         </div>
 
