--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="home">
         <header class="header" id="myHeader" w3-include-html="header.html">
             
         </header>
