--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
             <h1>well hello there.</h1></div>
             <div class="home-grid">
            <img src="images/binge.png" alt="Binge Website">
+           <img src="images/bookleticon.png" alt="Typography Booklet">
+           <img src="images/rainydaywebpageicon.png" alt="Rainy Day Website">
+           <img src="images/bookcovericon.png" alt="Book Cover">
+           <img src="images/acaitop.png" alt="Acai Infographic">
+           <img src="images/themountainspokemockup.png" alt="Mountain Spoke Website">
+           <img src="images/cactusFinal-13.png" alt="Logos">
+           <img src="images/postericon.png" alt="Music Posters">
+           <img src="images/postericon2.png" alt="More Posters">
+           <img src="images/webstyleguideicon.jpg" alt="Web Style Guide">
+           <img src="images/pinnaclepestlogoicon.png" alt="Logo">
+           <img src="images/logo_texture_background_clear.png" alt="Logo">
 
         </div>
 
