--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <main>
           
 
-            <h1>well hello there.</h1></div>
+            <h1>well hello there.</h1><h2>Welcome to my design Portfolio.</h2></div>
             <div class="home-grid">
            <img src="images/binge.png" alt="Binge Website">
            <img src="images/bookleticon.png" alt="Typography Booklet">
