--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
            <img src="images/bookleticon.png" alt="Typography Booklet">
            <img src="images/rainydaywebpageicon.png" alt="Rainy Day Website">
            <img src="images/bookcovericon.png" alt="Book Cover">
-           <img src="images/acaitop.png" alt="Acai Infographic">
+           <img src="images/acai4.jpg" alt="Acai Infographic">
            <img src="images/themountainspokemockup.png" alt="Mountain Spoke Website">
-           <img src="images/cactusFinal-13.png" alt="Logos">
-           <img src="images/postericon.png" alt="Music Posters">
+           <img src="images/finalcactusmockupicon.png" alt="Logos">
+           <img src="images/derekBrown-01.jpg" alt="Music Posters">
            <img src="images/postericon2.png" alt="More Posters">
            <img src="images/webstyleguideicon.jpg" alt="Web Style Guide">
            <img src="images/pinnaclepestlogoicon.png" alt="Logo">
