--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 
             <h1>well hello there.</h1><h4>Welcome to my design Portfolio.</h4></div>
             <div class="home-grid">
-           <img src="images/binge.png" alt="Binge Website">
-           <img src="images/bookleticon.png" alt="Typography Booklet">
-           <img src="images/rainydaywebpageicon.png" alt="Rainy Day Website">
-           <img src="images/bookcovericon.png" alt="Book Cover">
-           <img src="images/acai4.jpg" alt="Acai Infographic">
-           <img src="images/themountainspokemockup.png" alt="Mountain Spoke Website">
-           <img src="images/finalcactusmockupicon.png" alt="Logos">
-           <img src="images/derekBrown-01.jpg" alt="Music Posters">
-           <img src="images/postericon2.png" alt="More Posters">
-           <img src="images/webstyleguideicon.jpg" alt="Web Style Guide">
-           <img src="images/pinnaclepestlogoicon.png" alt="Logo">
-           <img src="images/logo_texture_background_clear.png" alt="Logo">
+           <a href=""><img src="images/binge.png" alt="Binge Website"></a>
+           <a href=""><img src="images/bookleticon.png" alt="Typography Booklet"></a>
+           <a href=""><img src="images/rainydaywebpageicon.png" alt="Rainy Day Website"></a>
+           <a href=""><img src="images/bookcovericon.png" alt="Book Cover"></a>
+           <a href=""><img src="images/acai4.jpg" alt="Acai Infographic"></a>
+           <a href=""><img src="images/themountainspokemockup.png" alt="Mountain Spoke Website"></a>
+           <a href=""><img src="images/finalcactusmockupicon.png" alt="Logos"></a>
+           <a href=""><img src="images/derekBrown-01.jpg" alt="Music Posters"></a>
+           <a href=""><img src="images/postericon2.png" alt="More Posters"></a>
+           <a href=""><img src="images/webstyleguideicon.jpg" alt="Web Style Guide"></a>
+           <a href=""><img src="images/pinnaclepestlogoicon.png" alt="Logo"></a>
+           <a href=""><img src="images/logo_texture_background_clear.png" alt="Logo"></a>
 
         </div>
 
