--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <h1>well hello there.</h1><h4>Welcome to my design Portfolio.</h4></div>
             <div class="home-grid">
-           <a href=""><img src="images/binge.png" alt="Binge Website"></a>
+           <a href=""><img src="images/binge.png" alt="Binge Website">Binge Website Prototype</a>
            <a href=""><img src="images/bookleticon.png" alt="Typography Booklet"></a>
            <a href=""><img src="images/rainydaywebpageicon.png" alt="Rainy Day Website"></a>
            <a href=""><img src="images/bookcovericon.png" alt="Book Cover"></a>
