--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
             <h1>well hello there.</h1><h4>Welcome to my design Portfolio.</h4></div>
             <div class="home-grid">
-           <a href=""><p>Binge Website Prototype</p><img src="images/binge.png" alt="Binge Website"></a>
-           <a href=""><p>The Living Bread Booklet</p><img src="images/bookleticon.png" alt="Typography Booklet"></a>
-           <a href=""><p>Rainy Day Website</p><img src="images/rainydaywebpageicon.png" alt="Rainy Day Website"></a>
-           <a href=""><p>Book Cover</p><img src="images/bookcovericon.png" alt="Book Cover"></a>
-           <a href=""><p>Acai Infographic</p><img src="images/acai4.jpg" alt="Acai Infographic"></a>
-           <a href=""><p>The Mountain Spoke Website</p><img src="images/themountainspokemockup.png" alt="Mountain Spoke Website"></a>
-           <a href=""><p>Featured Logos</p><img src="images/finalcactusmockupicon.png" alt="Logos"></a>
-           <a href=""><p>Music Posters</p><img src="images/derekBrown-01.jpg" alt="Music Posters"></a>
+           <a href="binge.html"><p>Binge Website Prototype</p><img src="images/binge.png" alt="Binge Website"></a>
+           <a href="breadbooklet.html"><p>The Living Bread Booklet</p><img src="images/bookleticon.png" alt="Typography Booklet"></a>
+           <a href="rainyday.html"><p>Rainy Day Website</p><img src="images/rainydaywebpageicon.png" alt="Rainy Day Website"></a>
+           <a href="bookcover.html"><p>Book Cover</p><img src="images/bookcovericon.png" alt="Book Cover"></a>
+           <a href="acai.html"><p>Acai Infographic</p><img src="images/acai4.jpg" alt="Acai Infographic"></a>
+           <a href="mountain.html"><p>The Mountain Spoke Website</p><img src="images/themountainspokemockup.png" alt="Mountain Spoke Website"></a>
+           <a href="logos.html"><p>Featured Logos</p><img src="images/finalcactusmockupicon.png" alt="Logos"></a>
+           <a href="musicposters.html"><p>Music Posters</p><img src="images/derekBrown-01.jpg" alt="Music Posters"></a>
            <a href=""><p>Poster Series</p><img src="images/postericon2.png" alt="More Posters"></a>
            <a href=""><p>Web Style Guide</p><img src="images/webstyleguideicon.jpg" alt="Web Style Guide"></a>
            <a href=""><p>Logos</p><img src="images/pinnaclepestlogoicon.png" alt="Logo"></a>
