--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
                     <a class="active" href="index.html">
                         <li>Home</li>
                     </a>
-                    <a href="portfolio.html">
+                    <a href="binge.html">
                         <li>Projects</li>
                     </a>
                     <a href="resume.html">
