--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
  <a href="index.html">
                 <h1 class="header">kelsie <strong>dustin</strong></h1>
             </a>
-            <nav class="mainmenu"><button onclick="myNav()"><div></div><div></div><div></div></button>
+            <nav class="mainmenu"><button onclick="myNav()"><span></span></button>
                 <ul>
                     <a class="active" href="index.html">
                         <li>Home</li>
