--- a/musicposters.html
+++ b/musicposters.html
@@ -18,7 +18,7 @@
            
 <h2>Posters and Advertisements</h2>
 
-<h3>Recovery & Change Poster Servies</h3>
+<h3>Recovery & Change Poster Series</h3>
 <div class="portfoliogrid">
 <img src="images/saamExhibition.png" alt="Anti-Pornography ">
 <img src="images/saam2.png" alt="Anti-Pornography Poster">
