--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </header>
 
         <main>
+            <div class="container">
           
 
             <h1>well hello there.</h1><h4>Welcome to my design Portfolio.</h4></div>
@@ -42,7 +43,7 @@
         <script src="scripts/sticky.js"></script>
         <script src="scripts/wayfinding.js"></script>
         <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-
+    </div>
 
 
     </div>
