--- a/header.html
+++ b/header.html
@@ -1,7 +1,9 @@
  <a href="index.html">
                 <h1 class="header">kelsie <strong>dustin</strong></h1>
             </a>
-            <nav class="mainmenu"><button onclick="myNav()"><span></span></button>
+            <nav class="mainmenu"><button onclick="myNav()"><div class="menu-icon" id="menu-icon" onclick="toggleNav()">
+                    <span></span>
+            </div></button>
                 <ul>
                     <a class="active" href="index.html">
                         <li>Home</li>
