--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
  <a href="index.html">
                 <h1 class="header">kelsie <strong>dustin</strong></h1>
             </a>
-            <nav class="mainmenu"><div class="menu-icon" id="menu-icon" onclick="toggleNav()">
+            <nav><div class="menu-icon" id="menu-icon" onclick="toggleNav()">
                     <span></span>
             
                 <ul>
