--- a/breadbooklet.html
+++ b/breadbooklet.html
@@ -24,7 +24,7 @@
                <p>Binge is a microsite prototype design that publicly enforces the abuse of online video 
                    streaming services like Netlix, YouTube, Hulu, and Amazon Prime Video. The site acts 
                    as a public service announcement for those who often binge watch on these services. 
-                   This project was introduced as an information design project. The XD prototype can be found
+                   This project was introduced as an information design project. The XD prototype can be found</p>
                <img src="images/TypeBookletp1.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp2.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp3.jpg" alt="Webpage Mockup">
