--- a/logos.html
+++ b/logos.html
@@ -18,7 +18,7 @@
          
        
         <h2>Logo Design and Branding</h2>
-        <div class="logos"></div>
+        <div class="logos"><p>testme</p></div>
 
         <!-- <img src="images/cactusLogoMockup.jpg" alt="Cactus Logo Mockup">
         <img src="images/cactusLogoMockup.jpg" alt="Cactus Logo Mockup">
