--- a/logos.html
+++ b/logos.html
@@ -20,8 +20,8 @@
         <h2>Logo Design and Branding</h2>
         
 
+        <img src="images/cactusLogoMockup.jpg" alt="Cactus Logo Mockup" width="100">
         <!-- <img src="images/cactusLogoMockup.jpg" alt="Cactus Logo Mockup">
-        <img src="images/cactusLogoMockup.jpg" alt="Cactus Logo Mockup">
         <img src="images/ProviderFarmsLogo.jpg" alt="Cactus Logo Mockup">
         <img src="images/providerFarmsMockupTshirt.jpg" alt="Cactus Logo Mockup">
         <img src="images/pinnaclePestLogoMockup.jpg" alt="Cactus Logo Mockup">
