--- a/logos.html
+++ b/logos.html
@@ -21,7 +21,7 @@
         
         </div>
         <div class="logos">
-        <img src="images/cactusLogoMockup1.jpg" alt="Cactus Logo Mockup" width="1500%">
+        <img src="images/cactusLogoMockup1.jpg" alt="Cactus Logo Mockup">
         <img src="images/cactusLogoMockup.jpg" alt="Cactus Logo Mockup">
         <img src="images/ProviderFarmsLogo.jpg" alt="Cactus Logo Mockup">
         <img src="images/providerFarmsMockupTshirt.jpg" alt="Cactus Logo Mockup">
