--- a/logos.html
+++ b/logos.html
@@ -26,7 +26,7 @@
         <img src="images/ProviderFarmsLogo copy.jpg" alt="Cactus Logo Mockup">
         <img src="images/providerFarmsMockupTshirt copy.jpg" alt="Cactus Logo Mockup">
         <img src="images/pinnaclePestLogoMockup copy.jpg" alt="Cactus Logo Mockup">
-        <img src="images/pinnacleLogoMockup2" alt="Cactus Logo Mockup">
+        <img src="images/pinnacleLogoMockup2.jpg" alt="Cactus Logo Mockup">
     </div>
         
         
