--- a/logos.html
+++ b/logos.html
@@ -24,9 +24,7 @@
         <img src="images/cactusLogoMockup1 copy.jpg" alt="Cactus Logo Mockup">
         <img src="images/cactusLogoMockup copy.jpg" alt="Cactus Logo Mockup">
         <img src="images/ProviderFarmsLogo copy.jpg" alt="Cactus Logo Mockup">
-        <img src="images/providerFarmsMockupTshirt copy.jpg" alt="Cactus Logo Mockup">
-        <img src="images/pinnaclePestLogoMockup copy.jpg" alt="Cactus Logo Mockup">
-        <img src="images/pinnacleLogoMockup2.jpg" alt="Cactus Logo Mockup">
+        <img src="images/providerFarmsMockupTshirt copy.jpg" alt="Cactus Logo Mockup"><img src="images/pinnaclePestLogoMockup copy.jpg" alt="Cactus Logo Mockup"><img src="images/pinnacleLogoMockup2.jpg" alt="Cactus Logo Mockup">
     </div>
         
         
