--- a/logos.html
+++ b/logos.html
@@ -21,7 +21,7 @@
         
         </div>
         <div class="logos">
-        <img src="images/cactusLogoMockup1 copy.jpg" alt="Cactus Logo Mockup">
+        <a><img src="images/cactusLogoMockup1 copy.jpg" alt="Cactus Logo Mockup"></a>
         <img src="images/cactusLogoMockup copy.jpg" alt="Cactus Logo Mockup">
         <img src="images/ProviderFarmsLogo copy.jpg" alt="Cactus Logo Mockup">
         <img src="images/providerFarmsMockupTshirt copy.jpg" alt="Cactus Logo Mockup"
