--- a/logos.html
+++ b/logos.html
@@ -22,7 +22,7 @@
         </div>
         <div class="logos">
         <a><img src="images/cactusLogoMockup1 copy.jpg" alt="Cactus Logo Mockup"></a>
-        <img src="images/cactusLogoMockup copy.jpg" alt="Cactus Logo Mockup">
+        <a><img src="images/cactusLogoMockup copy.jpg" alt="Cactus Logo Mockup"></a>
         <img src="images/ProviderFarmsLogo copy.jpg" alt="Cactus Logo Mockup">
         <img src="images/providerFarmsMockupTshirt copy.jpg" alt="Cactus Logo Mockup"
         ><img src="images/pinnaclePestLogoMockup copy.jpg" alt="Cactus Logo Mockup"><img src="images/pinnacleLogoMockup2.jpg" alt="Cactus Logo Mockup">
