--- a/logos.html
+++ b/logos.html
@@ -22,7 +22,7 @@
         </div>
         <div class="logos">
         <img src="images/cactusLogoMockup1 copy.jpg" alt="Cactus Logo Mockup">    
-        <div><img src="images/cactusicon.jpg" alt="cactus icon"><div><h2>Cactus Needles: A Tailor Company</h2><p>I created this logo and brand as a means to gain
+        <div><img src="images/cactusicon copy.jpg" alt="cactus icon"><div><h2>Cactus Needles: A Tailor Company</h2><p>I created this logo and brand as a means to gain
             insight in how to combine two different objects and create one unique symbol. Throughout this process
             I did user research many times. I would approach people showing only the icon, not the typography and
             ask them what they thought the symbol represented and meant. This type of user testing proved to be very 
