--- a/logos.html
+++ b/logos.html
@@ -22,7 +22,7 @@
         
         
         </div>
-        <div class="logos">
+        <div class="display">
         <img src="images/cactusLogoMockup1 copy.jpg" alt="Cactus Logo Mockup">    
         <div class="logo-display"><img src="images/cactusicon copy.jpg" alt="cactus icon"><div><h2>Cactus Needles: A Tailor Company</h2><p>I created this logo and brand as a means to gain
                 insight in how to combine two different objects and create one unique symbol. Throughout this process
