--- a/breadbooklet.html
+++ b/breadbooklet.html
@@ -19,13 +19,13 @@
        
     </div><div class="display">
            <img src="images/TypeBookletMockup1.jpg" alt="Webpage Mockup">
-           <div class="logo-display"><h3>The Living Bread Booklet</h3>
+           <div class="logo-display"><div><h3>The Living Bread Booklet</h3>
            <!--<img src="images/mountainspokeshop.png" alt="Mountain Spoke Screenshot">-->
                <p>Binge is a microsite prototype design that publicly enforces the abuse of online video 
                    streaming services like Netlix, YouTube, Hulu, and Amazon Prime Video. The site acts 
                    as a public service announcement for those who often binge watch on these services. 
                    This project was introduced as an information design project. The XD prototype can be found</p>
-                </div><img src="images/TypeBookletp1.jpg" alt="Webpage Mockup">
+                </div></div><img src="images/TypeBookletp1.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp2.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp3.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp4.jpg" alt="Webpage Mockup">
