--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
            <a href=""><p>Poster Series</p><img src="images/postericon2.png" alt="More Posters"></a>
            <a href=""><p>Web Style Guide</p><img src="images/webstyleguideicon.jpg" alt="Web Style Guide"></a>
            <a href=""><p>Logos</p><img src="images/ProviderFarmsLogo.jpg" alt="Logo"></a>
-           <a href=""><p>Logos</p><img src="images/logo_texture_background_clear.png" alt="Logo"></a>
+           <a href="righteous.html"><p>Logos</p><img src="images/rIghteousGraffitiVector.jpg" alt="Logo"></a>
 
         </div>
 
