--- a/breadbooklet.html
+++ b/breadbooklet.html
@@ -20,13 +20,12 @@
     </div><div class="display">
            
            <div class="logo-display"><img src="images/TypeBookletMockup1.jpg" alt="Webpage Mockup">
-            <div><h2>The Living Bread Booklet</h2>
-           <!--<img src="images/mountainspokeshop.png" alt="Mountain Spoke Screenshot">-->
-               <p>Binge is a microsite prototype design that publicly enforces the abuse of online video 
-                   streaming services like Netlix, YouTube, Hulu, and Amazon Prime Video. The site acts 
-                   as a public service announcement for those who often binge watch on these services. 
+            <div><h2>The Living Bread Booklet</h2><p>Binge is a microsite prototype design that publicly enforces 
+                the abuse of online video streaming services like Netlix, YouTube, Hulu, and Amazon Prime Video. 
+                The site acts as a public service announcement for those who often binge watch on these services. 
                    This project was introduced as an information design project. The XD prototype can be found</p>
-                </div></div><img src="images/TypeBookletp1.jpg" alt="Webpage Mockup">
+                </div></div>
+            <img src="images/TypeBookletp1.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp2.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp3.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp4.jpg" alt="Webpage Mockup">
