--- a/breadbooklet.html
+++ b/breadbooklet.html
@@ -32,7 +32,7 @@
                <img src="images/TypeBookletp5.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp6.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp7.jpg" alt="Webpage Mockup">
-               <img src="images/TypeBookletp8.jpg" alt="Webpage Mockup">
+               <img src="images/TypeBookletp8 copy.jpg" alt="Webpage Mockup">
            
          
 
