--- a/breadbooklet.html
+++ b/breadbooklet.html
@@ -25,7 +25,7 @@
                    streaming services like Netlix, YouTube, Hulu, and Amazon Prime Video. The site acts 
                    as a public service announcement for those who often binge watch on these services. 
                    This project was introduced as an information design project. The XD prototype can be found</p>
-                </div><img src="images/TypeBookletp1 copy.jpg.jpg" alt="Webpage Mockup">
+                </div><img src="images/TypeBookletp1 copy.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp2 copy.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp3 copy.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp4 copy.jpg" alt="Webpage Mockup">
