--- a/bookcover.html
+++ b/bookcover.html
@@ -19,11 +19,16 @@
        
         <h3>The Grapes of Wrath Book Cover Design</h3>
         <img src="images/bookcovericon.png" alt="Book Cover">
-        <p>For an academic project I was asked to recreate a book cover for a classic novel. 
-            This book cover was created by photographs I took and then manipulated slightly. 
-            Themes for the Grapes of Wrath include hard work, family, trial and poverty. These 
-            themes were illustrated in the simplicity of the designa as well as the sullen saturation 
-            and subject of the photograph.</p>
+        <p>I created a book cover for the classic novel, The Grapes of Wrath by John Steinbeck. 
+            This project consisted of taking several of my own photographs for the design and 
+            manipulating them in a way that would create a symbolic meaning for the book. 
+            </p>
+            <div class="4-column">
+            <img src="images/bookcover1.jpg" alt="Book Cover">
+            <img src="images/bookcover2.jpg" alt="Book Cover">
+            <img src="images/bookcover3.jpg" alt="Book Cover">
+            <img src="images/bookcover4.jpg" alt="Book Cover">
+        </div>
 
 
 
