--- a/bookcover.html
+++ b/bookcover.html
@@ -29,6 +29,10 @@
             <img src="images/bookcover3.jpg" alt="Book Cover">
             <img src="images/bookcover4.jpg" alt="Book Cover">
         </div>
+        <p>After taking several different photos, I decided to stick with the theme of wheat in the hands. 
+            In the novel, the characters suffer greatly from poverty and other trials. In my mind, the 
+            wheat (or wheat-like plant) represented prosperity and happiness. In many of the photos taken, 
+            the wheat is falling out of the hands, or is being held onto as if it is precious. </p>
 
 
 
