--- a/bookcover.html
+++ b/bookcover.html
@@ -34,6 +34,12 @@
             wheat (or wheat-like plant) represented prosperity and happiness. In many of the photos taken, 
             the wheat is falling out of the hands, or is being held onto as if it is precious. </p>
 
+            <img src="images/bookcover5.jpg" alt="Book Cover">
+
+            <p>After choosing the right photograph, I made a few more changes, editing the stray wheat so 
+                that it appeared darker and almost diseased, as if the wheat was going bad. The wheat left 
+                in his hand, however, is still good. He is cradling it as if it is the last best thing. </p>
+
 
 
         </main>
