--- a/binge.html
+++ b/binge.html
@@ -20,7 +20,7 @@
         </div>
         <div class="display">
             
-           <img src="images/binge" alt="Webpage Mockup">
+           <img src="images/binge0.jpg" alt="Webpage Mockup">
            <h2>Binge: The Real Enemy of Productivity Prototype</h2>
            
            <!--<img src="images/mountainspokeshop.png" alt="Mountain Spoke Screenshot">-->
