--- a/bookcover.html
+++ b/bookcover.html
@@ -18,7 +18,7 @@
         </div><div class="display">
        
         <h3>The Grapes of Wrath Book Cover Design</h3>
-        <img src="images/bookcovericon.png" alt="Book Cover">
+        <img src="images/bookcovericon.jpg" alt="Book Cover">
         <p>I created a book cover for the classic novel, The Grapes of Wrath by John Steinbeck. 
             This project consisted of taking several of my own photographs for the design and 
             manipulating them in a way that would create a symbolic meaning for the book. 
