--- a/acai.html
+++ b/acai.html
@@ -27,7 +27,7 @@
             a quote from Bobby Flay's website that acts as the bodycopy for the page, as well 
             as a list to find some of his recipes. The challenge of this project was to use 
             two fonts and only two fonts, at least three colors, and a header and footer 
-            to the website. 
+            to the website. </p>
             <img src="images/acaianimation.gif" alt="acaigif">
             <img src="images/acai3.png" alt="Webpage Mockup">
             <img src="images/acai4.jpg" alt="Webpage Mockup"> 
