--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
            <a href="rainyday.html"><p>Rainy Day Website</p><img src="images/rainydaywebpageicon.png" alt="Rainy Day Website"></a>
            <a href="bookcover.html"><p>Book Cover</p><img src="images/bookcovericon.png" alt="Book Cover"></a>
            <a href="acai.html"><p>Acai Infographic</p><img src="images/acai4.jpg" alt="Acai Infographic"></a>
-           <a href="mountain.html"><p>The Mountain Spoke Website</p><img src="images/themountainspokemockup.png" alt="Mountain Spoke Website"></a>
+           <a href="mountain.html"><p>The Mountain Spoke Website</p><img src="images/mountainmockup.jpg" alt="Mountain Spoke Website"></a>
            <a href="logos.html"><p>Featured Logos</p><img src="images/ProviderFarmsLogo.jpg" alt="Logos"></a>
            <a href="musicposters.html"><p>Music Posters</p><img src="images/derekBrownhome.jpg" alt="Music Posters"></a>
            <a href=""><p>Poster Series</p><img src="images/postericon2.png" alt="More Posters"></a>
