--- a/mountain.html
+++ b/mountain.html
@@ -37,7 +37,7 @@
         <img src="images/moutain2.png" alt="Webpage Mockup">
         <img src="images/mountain3.png" alt="Webpage Mockup">
         </div>
-        <img src="images/themountainspokemockup.png" alt="Website Mockup">
+        <img src="images/webpageicon.png" alt="Website Mockup">
 
          
 
