--- a/acai.html
+++ b/acai.html
@@ -29,8 +29,8 @@
             two fonts and only two fonts, at least three colors, and a header and footer 
             to the website. </p>
             <img src="images/acaianimation.gif" alt="acaigif">
-            <img src="images/acai3.png" alt="Webpage Mockup">
-            <img src="images/acai4.jpg" alt="Webpage Mockup"> 
+            <!-- <img src="images/acai3.png" alt="Webpage Mockup"> -->
+            <img src="images/acai4.jpg" alt="Webpage Mockup" style="text-align: center;"> 
 
        
 
