--- a/acai.html
+++ b/acai.html
@@ -30,7 +30,7 @@
             to the website. </p>
             <img src="images/acaianimation.gif" alt="acaigif">
             <!-- <img src="images/acai3.png" alt="Webpage Mockup"> -->
-            <img src="images/acai4.jpg" alt="Webpage Mockup" style="text-align: center;"> 
+            <img src="images/acai4.jpg" alt="Webpage Mockup" style="display: flex; justify-content: center;"> 
 
        
 
