--- a/musicposters.html
+++ b/musicposters.html
@@ -29,33 +29,33 @@
     by the Family Crisis Center. The caption read: "There is no destination. But moving forward 
     day by day is the ultimate goal. As long as there is movement, there is progress."
 </p> -->
-<div class="display-logos">
+<div class="logo-display">
         <img src="images/chamberStringsPoster-01.jpg" alt="Poster"><div><h2>String Chamber Ensemble</h2><p>Description</p>
         </div>
         </div>
 
-<div class="display-logos">
+<div class="logo-display">
 <img src="images/pianomajors.png" alt="Poster"><div><h2>Piano Majors Recital</h2><p>Description</p>
 </div>
 </div>
 
-<div class="display-logos">
+<div class="logo-display">
         <img src="images/derekBrown-01.jpg" alt="Poster"><div><h2>Derek Brown Poster</h2><p>Description</p>
         </div>
         </div>
 
-        <div class="display-logos">
+        <div class="logo-display">
                 <img src="images/jazzposter.png" alt="Poster"><div><h2>Jazz Ensemble</h2><p>Description</p>
                 </div>
                </div>
 
 
-<div class="display-logos">
+<div class="logo-display">
     <img src="images/universityOrchestra.png" alt="Poster"><div><h2>universityOrchestra</h2><p>Description</p>
     </div>
     </div>
 
-    <div class="display-logos">
+    <div class="logo-display">
             <img src="images/chamberWinds.jpg" alt="Poster"><div><h2>Chamber Winds</h2><p>Description</p>
             </div>
             </div>
