--- a/musicposters.html
+++ b/musicposters.html
@@ -38,6 +38,7 @@
 <img src="images/pianomajors.png" alt="Poster"><div><h2>Piano Majors Recital</h2><p>Description</p>
 </div>
 </div>
+<img src="images/derekmockup2.png" alt="PosterMockup">
 
 <div class="logo-display">
         <img src="images/derekBrown-01.jpg" alt="Poster"><div><h2>Derek Brown Poster</h2><p>Description</p>
@@ -49,7 +50,7 @@
                 </div>
                </div>
 
-
+<img src="images/univeristyorchestramockup2.jpg" alt="Poster Mockup">
 <div class="logo-display">
     <img src="images/universityOrchestra.png" alt="Poster"><div><h2>universityOrchestra</h2><p>Description</p>
     </div>
