--- a/styleguide.html
+++ b/styleguide.html
@@ -15,8 +15,8 @@
         
         <h1>here's some of my stuff.</h1>
    
-    <h3>Insight Web Style Guide</h3>
-    
+    <h2>Insight Web Style Guide</h2>
+</div><div class="display">
     <img src="images/webstyleguideicon.jpg" alt="Webpage Mockup">
     <!--<img src="images/mountainspokeshop.png" alt="Mountain Spoke Screenshot">-->
         <p>This project is a web style guide for a fictional web magazine, InSight. 
@@ -28,7 +28,7 @@
             to the website. The full project and more details can be found
             <a href="https://www.behance.net/gallery/58845243/Web-Style-Guide"><strong>here</strong></a>
 
-
+        </div>
 
         </main>
         <footer w3-include-html="footer.html">
@@ -42,6 +42,6 @@
 
 
 
-   </div>
+   
 </body>
 </html>
